@@ -173,7 +173,9 @@
     </b>
       <P><A NAME="hid_script_runonecommand"></A><b>Edit/Run One Line command (Script menu)</b></P>
     <P>Use this command to open a small free-standing window in which you can enter a 
-      set of one-line commands and run them.&nbsp;The window allows up to 5 such 
+      set of one-line scripts and run them.&nbsp; As of SerialEM 4.1, 30-Mar-23, 
+      &#39;one-line&#39; no longer means &#39;one command&#39;.&nbsp; Multiple commands can be 
+      entered, separated by &#39;;&#39; (semicolon).&nbsp; The window allows up to 5 such 
       scripts.&nbsp; When you edit in one of the lines, its <strong>Run</strong> 
       button becomes the default button for the window (as shown by the <strong>Run</strong> 
       being in bold) 
