@@ -3,6 +3,11 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+3/30/23: Added ability to enter multiple commands separated by commas in
+one-line script window.
+
+3/30/23: Added dose rate linearization table for Falcon 4i.
+
 3/30/23: Enabled File-Open Old when Acquire at Items is open (In 4.0).
 
 3/30/23: Disabled float return option in camera menu for FEI cameras (In 4.0).
